Load weather of saved location on click

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -51,7 +51,13 @@ body {
     vertical-align: middle;
   }
 
-  button {
+  button.location-name {
+    width: 200px;
+    height: auto;
+    white-space: normal;
+  }
+
+  button.is-danger {
     border: 0;
   }
 }
