Hide Skycon if no current location and add hourly summary

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -27,16 +27,13 @@ body {
     font-size: 28px;
   }
 
-  .temperature,
-  .summary,
-  .location {
-    font-size: 20px;
-    font-weight: bold;
-  }
-
   button {
     margin-left: 10px;
     vertical-align: middle;
+  }
+
+  .hourly {
+    font-size: 18px;
   }
 }
 
