--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -1,6 +1,46 @@
 body {
   background-color: #CCFFFF;
   height: 100vh;
+
+  &.temp1 {
+    background-color: rgba(0, 0, 255, 0.5);
+  }
+
+  &.temp2 {
+    background-color: rgba(0, 115, 255, 0.5);
+  }
+
+  &.temp3 {
+    background-color: rgba(0, 225, 255, 0.5);
+  }
+
+  &.temp4 {
+    background-color: rgba(0, 255, 170, 0.5);
+  }
+
+  &.temp5 {
+    background-color: rgba(0, 255, 55, 0.5);
+  }
+
+  &.temp6 {
+    background-color: rgba(55, 255, 0, 0.5);
+  }
+
+  &.temp7 {
+    background-color: rgba(170, 255, 0, 0.5);
+  }
+
+  &.temp8 {
+    background-color: rgba(255, 225, 0, 0.5);
+  }
+
+  &.temp9 {
+    background-color: rgba(255, 115, 0, 0.5);
+  }
+
+  &.temp10 {
+    background-color: rgba(255, 0, 0, 0.5);
+  }
 }
 
 #app {
